# taskserver

./: CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
taskserver/: decorators.py  server.py
taskserver/management/commands/: startserver.py
tests/: __init__.py  test_taskserver.py
