[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskserver"
version = "0.1.0"
description = "Very simple task server based on asgiref's StatelessServer and inspired by channels-beatserver"
readme = "README.rst"
authors = [
  {name = "Oleg Rybkin aka Fish", email = "okfish@yandex.ru"}
]
maintainers = [
  {name = "Oleg Rybkin aka Fish", email = "okfish@yandex.ru"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "channels",
    "croniter"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/okfish/taskserver/issues"
changelog = "https://github.com/okfish/taskserver/blob/master/changelog.md"
homepage = "https://github.com/okfish/taskserver"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

